# E-commerce-store

./: .env  .env.sample  .gitignore  README.md  create_and_migrate.py  database.py  migrate.py  models.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 70db5201373c_add_default_timestamps.py  dc7dd6e2cfb9_added_created_at_and_updated_at.py
