[tool.poetry]
name = "poetry-project-with-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
sqlalchemy = ">=2.0.38,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
python-dotenv = ">=1.0.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
!q