[tool.poetry]
name = "poetry-project-with-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12"
sqlalchemy = "^2.0.39"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
alembic = "^1.15.1"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
